--- a/app/src/main/res/layout/fragment_geiger_search.xml
+++ b/app/src/main/res/layout/fragment_geiger_search.xml
@@ -118,6 +118,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <com.csl.cs108ademoapp.CustomDrawableView
+        android:id="@+id/directionIndicator"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
